fixed height of quick articles to fit more text, also adjusted gap in section for better handling

--- a/css/non-index-style.css
+++ b/css/non-index-style.css
@@ -2,6 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noticia+Text:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 .normal-sidebar {
+    max-width: 20%;
     display: inline;
     position: fixed;
     top: 4rem;
@@ -9,15 +10,15 @@
     justify-items: end;
     z-index: 49;
     color: var(--color-amber-50);
-    transition: 1s;
     div {
         background-color: rgba(62, 62, 62, 0.95);
         display: none;
-        height: 100vh;
+        height: 80vh;
         border-radius: 1rem;
         padding-top: 1rem;
         padding-left: 0.5rem;
         padding-right: 0.5rem;
+        overflow-y: scroll;
         h1 {
             color: var(--color-amber-50);
         }
@@ -26,6 +27,10 @@
     li {
         line-height: 1.2rem;
         margin-bottom: 0.5rem;
+        border: 1px solid var(--color-amber-50);
+        border-radius: 0.5rem;
+        padding: 0.5rem;
+        transition: color 1s, background-color 1s;
     }
 }
 
@@ -40,8 +45,9 @@
     }
 }
 
-.normal-sidebar a:hover {
-    font-weight: 600;
+.normal-sidebar li:hover {
+    background-color: var(--color-amber-50);
+    color: rgb(62, 62, 62);
 }
 
 @media only screen and (min-width: 1024px) {
