--- a/css/styleoutput.css
+++ b/css/styleoutput.css
@@ -8,7 +8,6 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-red-400: oklch(0.704 0.191 22.216);
     --color-red-500: oklch(0.637 0.237 25.331);
     --color-amber-50: oklch(0.987 0.022 95.277);
     --spacing: 0.25rem;
@@ -481,9 +480,6 @@
   }
   .max-h-16 {
     max-height: calc(var(--spacing) * 16);
-  }
-  .max-h-24 {
-    max-height: calc(var(--spacing) * 24);
   }
   .max-h-36 {
     max-height: calc(var(--spacing) * 36);
@@ -1166,9 +1162,6 @@
   .bg-amber-50 {
     background-color: var(--color-amber-50);
   }
-  .bg-red-400 {
-    background-color: var(--color-red-400);
-  }
   .bg-red-500 {
     background-color: var(--color-red-500);
   }
@@ -1509,9 +1502,6 @@
   }
   .\[color\:red\]\/50\! {
     color: color-mix(in oklab, red 50%, transparent) !important;
-  }
-  .text-amber-50 {
-    color: var(--color-amber-50);
   }
   .capitalize {
     text-transform: capitalize;
@@ -2046,6 +2036,21 @@
       height: calc(var(--spacing) * 44);
     }
   }
+  .lg\:h-48 {
+    @media (width >= 64rem) {
+      height: calc(var(--spacing) * 48);
+    }
+  }
+  .lg\:h-52 {
+    @media (width >= 64rem) {
+      height: calc(var(--spacing) * 52);
+    }
+  }
+  .lg\:h-54 {
+    @media (width >= 64rem) {
+      height: calc(var(--spacing) * 54);
+    }
+  }
   .lg\:max-h-28 {
     @media (width >= 64rem) {
       max-height: calc(var(--spacing) * 28);
@@ -2064,6 +2069,11 @@
   .lg\:w-1\/5 {
     @media (width >= 64rem) {
       width: calc(1/5 * 100%);
+    }
+  }
+  .lg\:w-2\/5 {
+    @media (width >= 64rem) {
+      width: calc(2/5 * 100%);
     }
   }
   .lg\:w-2\/17 {
@@ -2101,9 +2111,19 @@
       justify-content: space-around;
     }
   }
+  .lg\:gap-0 {
+    @media (width >= 64rem) {
+      gap: calc(var(--spacing) * 0);
+    }
+  }
   .lg\:gap-0\.5 {
     @media (width >= 64rem) {
       gap: calc(var(--spacing) * 0.5);
+    }
+  }
+  .lg\:gap-0\.25 {
+    @media (width >= 64rem) {
+      gap: calc(var(--spacing) * 0.25);
     }
   }
   .lg\:gap-1 {
@@ -2114,6 +2134,11 @@
   .lg\:gap-4 {
     @media (width >= 64rem) {
       gap: calc(var(--spacing) * 4);
+    }
+  }
+  .lg\:gap-\[1px\] {
+    @media (width >= 64rem) {
+      gap: 1px;
     }
   }
   .lg\:border-0 {
@@ -2275,6 +2300,7 @@ p {
     border-radius: 1rem;
     padding-left: 0.5rem;
     padding-right: 0.5rem;
+    overflow-y: scroll;
   }
 }
 .sidebar h1 {
@@ -2283,13 +2309,17 @@ p {
 }
 .sidebar:hover {
   display: flex;
-  flex-direction: row;
+  flex-direction: row-reverse;
   gap: 1rem;
   div {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
+}
+.sidebar li:hover {
+  background-color: var(--color-amber-50);
+  color: rgb(62, 62, 62);
 }
 .author {
   font-family: "Mr Dafoe", cursive;
